[package]
name = "groovepush"
version = "0.1.0"
edition = "2021"
description = "音楽制作者向けのCLIベースのS3バックアップツール"
license = "MIT"

[[bin]]
name = "gp"
path = "src/main.rs"

[dependencies]
# 非同期ランタイム
tokio = { version = "1", features = ["full"] }

# AWS SDK
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"

# ファイルスキャン（ripgrepエンジン）
ignore = "0.4"

# シリアライゼーション
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# 進捗バー
indicatif = "0.17"

# エラー処理
anyhow = "1"
thiserror = "2"

# ファイルハッシュ
sha2 = "0.10"

# 時間
chrono = { version = "0.4", features = ["serde"] }
